bizinikiwi/pezframe/support/test/tests/pezpallet_ui/default_config_with_no_default_in_system.stderr
error[E0220]: associated type `Block` not found for `Self`
  --> tests/pezpallet_ui/default_config_with_no_default_in_system.rs:25:31
   |
25 |         type MyGetParam2: Get<Self::Block>;
   |                                     ^^^^^ there is an associated type `Block` in the trait `pezframe_system::Config`
